--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ body{
 .nav{
     height: 40px;
     /*display: inline;*/
-    background-color: saddlebrown;
+    background-color:  #D4105A;
 
 }
 .nav_left{
